add empty junittest module, restructure, update README.md building guidance